@@ -8,7 +8,7 @@
  * Plugin URI:  http://premium.wpmudev.org/project/coursepress/
  * License:     GPL2
  * License URI: https://www.gnu.org/licenses/gpl-2.0.html
- * TextDomain:  cp
+ * Text Domain: CP_TD
  * Domain Path: /language/
  * Build Time:  2016-04-07T13:37:59.644Z
  * WDP ID:      913071
