@@ -8,6 +8,7 @@ CHANGELOG
 = 2.0.2 =
 -------------------------------------------------
 * Fixed a bug with class autoloder function.
+* Fixed "Domain Name" for proper translation.
 
 = 2.0.0 =
 -------------------------------------------------
